--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Integrador</title>
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/carrito.css">
+    <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="../../styles/cliente/carrito.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     </footer>
 </body>
 
-<script src="../scripts/utils.js" defer></script>
-<script src="../scripts/carrito.js" defer></script>
+<script src="../../scripts/utils.js" defer></script>
+<script src="../../scripts/cliente/carrito.js" defer></script>
 
 </html>
