--- a/frontend/views/cliente/ticket.html
+++ b/frontend/views/cliente/ticket.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Integrador</title>
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/bienvenida.css">
+    <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="../../styles/cliente/ticket.css">
 </head>
 
 <body>
     <!-- Barra de navegación -->
     <nav>
         <ul>
-            <li><a href="bienvenida.html" class="active">Inicio</a></li>
+            <li><a href="bienvenida.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="carrito.html">Carrito</a></li>
-            <li><a href="ticket.html">Ticket</a></li>
+            <li><a href="ticket.html" class="active">Ticket</a></li>
         </ul>
     </nav>
 
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-         <h1>Bienvenida</h1>
+         <h1>Ticket</h1>
     </main>
 
     <!-- Pie de página -->
@@ -32,7 +32,7 @@
     </footer>
 </body>
 
-<script src="../scripts/utils.js" defer></script>
-<script src="../scripts/bienvenida.js" defer></script>
+<script src="../../scripts/utils.js" defer></script>
+<script src="../../scripts/cliente/ticket.js" defer></script>
 
 </html>
