--- a/frontend/views/cliente/ticket.html
+++ b/frontend/views/cliente/ticket.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <header>
+        <img src="../../assets/imgs/gameLogo.jpg" alt="shop logo">
+        <h1>G4ME $T0RE</h1>
+        <div class="alumnos-container">
+            <p>Freijomil Bruno</p>
+            <p>Gonzalez Paula</p>
+            <p>Sanchez Franco Nicolas</p>
+        </div>
+    </header>
     <!-- Barra de navegación -->
     <nav>
         <ul>
@@ -23,7 +32,7 @@
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-         <h1>Ticket</h1>
+        <h1>Ticket</h1>
     </main>
 
     <!-- Pie de página -->
