se quitan los botones segun la pagina

--- a/frontend/views/cliente/bienvenida.html
+++ b/frontend/views/cliente/bienvenida.html
@@ -33,7 +33,7 @@
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-        <h1>Bienvenida</h1>
+        <h1 style="text-align: center;">Bienvenida</h1>
 
 
         <form id="form-bienvenida">
