--- a/frontend/views/cliente/ticket.html
+++ b/frontend/views/cliente/ticket.html
@@ -22,21 +22,22 @@
     <!-- Barra de navegación -->
     <nav>
         <ul>
-            <li><a href="bienvenida.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="carrito.html">Carrito</a></li>
+            <li class="salir-button"><a href="bienvenida.html">SALIR</a></li>
+            <!-- <li><a href="productos.html">Productos</a></li>
+            <li><a href="carrito.html">Carrito</a></li> -->
         </ul>
     </nav>
 
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-        <h1>Ticket</h1>
+        <h1 style="text-align: center;">Ticket</h1>
+        <p style="text-align: center;"> (Mostrar el ticket) </p>
     </main>
 
     <!-- Pie de página -->
     <footer>
-        <p>(acá va el footer)</p>
+        <p>GRACIAS POR SU COMPRA</p>
     </footer>
 </body>
 
