--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -22,9 +22,9 @@
     <!-- Barra de navegación -->
     <nav>
         <ul>
-            <li><a href="bienvenida.html">Inicio</a></li>
+            <li class="salir-button"><a href="bienvenida.html">Salir</a></li>
             <li><a href="productos.html">Productos</a></li>
-            <li><a href="carrito.html" class="active">Carrito</a></li>
+            <!-- <li><a href="carrito.html" class="active">Carrito</a></li> -->
         </ul>
     </nav>
 
@@ -36,7 +36,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>(acá va el footer)</p>
+        <a href="ticket.html" class="footer-btn">Confirmar compra</a>
     </footer>
 </body>
 
