--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -31,7 +31,7 @@
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-        <h1>Carrito</h1>
+        <h1 style="text-align: center;">Carrito</h1>
     </main>
 
     <!-- Pie de página -->
