--- a/frontend/styles/cliente/productos.css
+++ b/frontend/styles/cliente/productos.css
@@ -39,8 +39,60 @@
 #productos-container{
     padding: 2rem;
     text-align: center;
-    background-color: red;
+    background-color: #f0f0f0;
 }
+
+
+
+/* mostrar "tarjetas" de juegos */
+
+#productos-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.card {
+  background: white;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+}
+
+.card h3 {
+  margin: 0.5rem 0;
+}
+
+.card p {
+  margin: 0.25rem 0;
+  font-weight: bold;
+}
+
+.agregar-button{
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    background-color: purple;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.agregar-button:hover {
+    background-color: violet;
+}
+
+
+
+
 
 /* Responsive */
 @media (max-width: 500px) {
