--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -129,6 +129,10 @@ footer {
     background-color: violet;
 }
 
+.hidden {
+    display: none;
+}
+
 
 /* Responsive */
 @media (max-width: 600px) {
