--- a/frontend/styles/cliente/carrito.css
+++ b/frontend/styles/cliente/carrito.css
@@ -1,1 +1,61 @@
 /* Estilos para la pagina del carrito */
+
+#carrito-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.card {
+  background: white;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.card img {
+  width: 50%;
+  height: auto;
+  border-radius: 6px;
+}
+
+.card h3 {
+  margin: 0.5rem 0;
+}
+
+.card p {
+  margin: 0.25rem 0;
+  font-weight: bold;
+}
+
+.agregar-button{
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    background-color: purple;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.agregar-button:hover {
+    background-color: violet;
+}
+
+.quitar-button {
+    margin-top: 0.2rem;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    background-color: rgb(255, 0, 76);
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.quitar-button:hover {
+    background-color: violet;
+}
