--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -32,6 +32,9 @@
     <main>
         <!-- Aquí irá el contenido dinámico -->
         <h1 style="text-align: center;">Carrito</h1>
+        <div id="carrito-container">
+
+        </div>
     </main>
 
     <!-- Pie de página -->
