--- a/frontend/views/cliente/bienvenida.html
+++ b/frontend/views/cliente/bienvenida.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
+    <div class="alumnos-container">
+        <p>Freijomil Bruno</p>
+        <p>Gonzalez Paula</p>
+        <p>Sanchez Franco Nicolas</p>
+    </div>
     <header>
         <img src="../../assets/imgs/gameLogo.jpg" alt="shop logo">
         <h1>G4ME $T0RE</h1>
-        <div class="alumnos-container">
-            <p>Freijomil Bruno</p>
-            <p>Gonzalez Paula</p>
-            <p>Sanchez Franco Nicolas</p>
-        </div>
+        
     </header>
     <!-- Barra de navegación -->
     <nav>
@@ -32,16 +33,15 @@
 
     <!-- Contenedor principal -->
     <main>
-        <!-- Aquí irá el contenido dinámico -->
-        <h1 style="text-align: center;">Bienvenida</h1>
+        <div id="bienvenida-container">
+            <h1 style="text-align: center;">Bienvenida</h1>
 
-
-        <form id="form-bienvenida">
-            <label for="nombre-bienvenida">¿Cómo te llamás?</label>
-            <input type="text" id="nombre-bienvenida" name="nombre">
-            <button type="submit" id="btn-bienvenida">COMENZAR</button>
-        </form>
-
+            <form id="form-bienvenida">
+                <label for="nombre-bienvenida">¿Cómo te llamás?</label>
+                <input type="text" id="nombre-bienvenida" name="nombre">
+                <button type="submit" id="btn-bienvenida">COMENZAR</button>
+            </form>
+        </div>
     </main>
 
     <!-- Pie de página -->
