--- a/frontend/styles/cliente/carrito.css
+++ b/frontend/styles/cliente/carrito.css
@@ -10,6 +10,7 @@
 
 #carrito-container .card {
     background: #fff;
+    color: black!important;
     border-radius: 10px;
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
