--- a/frontend/views/cliente/ticket.html
+++ b/frontend/views/cliente/ticket.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
+    <div class="alumnos-container">
+        <p>Freijomil Bruno</p>
+        <p>Gonzalez Paula</p>
+        <p>Sanchez Franco Nicolas</p>
+    </div>
     <header>
         <img src="../../assets/imgs/gameLogo.jpg" alt="shop logo">
         <h1>G4ME $T0RE</h1>
-        <div class="alumnos-container">
-            <p>Freijomil Bruno</p>
-            <p>Gonzalez Paula</p>
-            <p>Sanchez Franco Nicolas</p>
-        </div>
+        <button type="button" id="btn-darkMode"> ☀️ </button>
     </header>
     <!-- Barra de navegación -->
     <nav>
