--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -36,6 +36,10 @@
         <div id="carrito-container">
 
         </div>
+
+        <div id="total-container">
+
+        </div>
     </main>
 
     <!-- Pie de página -->
