--- a/frontend/views/cliente/ticket.html
+++ b/frontend/views/cliente/ticket.html
@@ -32,8 +32,10 @@
     <!-- Contenedor principal -->
     <main>
         <!-- Aquí irá el contenido dinámico -->
-        <h1 style="text-align: center;">Ticket</h1>
-        <p style="text-align: center;"> (Mostrar el ticket) </p>
+        
+        <div id="ticket-container">
+
+        </div>
     </main>
 
     <!-- Pie de página -->
