--- a/frontend/styles/cliente/carrito.css
+++ b/frontend/styles/cliente/carrito.css
@@ -80,3 +80,11 @@
     flex-direction: column;
     gap: 0.5rem;
 }
+
+#total-container {
+    margin-top: 1rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
