favicon y titulo agregado

--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP Integrador</title>
+    <title>Game Store - Carrito</title>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/10339/10339556.png">
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/cliente/carrito.css">
 </head>
