se agrega paginacion

--- a/frontend/views/cliente/productos.html
+++ b/frontend/views/cliente/productos.html
@@ -42,6 +42,13 @@
         <div id="productos-container">
 
         </div>
+
+        <div id="paginacion-container">
+            
+            <button type="button" id="anterior-button">Anterior</button>
+            <p><span id="pagina-actual"></span></p>
+            <button type="button" id="siguiente-button">Siguiente</button>
+        </div>
     </main>
 
     <!-- Pie de página -->
