--- a/frontend/styles/cliente/productos.css
+++ b/frontend/styles/cliente/productos.css
@@ -1,4 +1,10 @@
 /* Estilos para la pagina donde muestra los productos */
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container-buttons {
     display: flex;
     flex-wrap: wrap;
@@ -36,47 +42,45 @@
     background-color: violet;
 }
 
-#productos-container{
-    padding: 2rem;
-    text-align: center;
-    background-color: #f0f0f0;
-}
-
-
 
 /* mostrar "tarjetas" de juegos */
 
 #productos-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    padding: 2rem;
+    text-align: center;
+    background-color: #f0f0f0;
+    width: 80%;
+    border-radius: 10px;
 }
 
 .card {
-  background: white;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  color: black;
+    background: white;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: black;
 }
 
 .card img {
-  width: 100%;
-  height: auto;
-  border-radius: 6px;
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
 }
 
 .card h3 {
-  margin: 0.5rem 0;
+    margin: 0.5rem 0;
 }
 
 .card p {
-  margin: 0.25rem 0;
-  font-weight: bold;
+    margin: 0.25rem 0;
+    font-weight: bold;
 }
 
-.agregar-button{
+.agregar-button {
     padding: 10px 20px;
     font-size: 1rem;
     border: none;
@@ -106,6 +110,35 @@
 .quitar-button:hover {
     background-color: violet;
 }
+
+#paginacion-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem 2rem;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    margin: 1rem auto;
+    max-width: 600px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+#paginacion-container button {
+   padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    background-color: purple;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#paginacion-container button:hover {
+    background-color: violet;
+}
+
 
 
 
