--- a/frontend/views/cliente/bienvenida.html
+++ b/frontend/views/cliente/bienvenida.html
@@ -40,7 +40,7 @@
             <form id="form-bienvenida">
                 <label for="nombre-bienvenida">¿Cómo te llamás?</label>
                 <input type="text" id="nombre-bienvenida" name="nombre">
-                <button type="submit" id="btn-bienvenida">COMENZAR</button>
+                <button type="submit" id="btn-bienvenida" class="button">COMENZAR</button>
             </form>
         </div>
     </main>
