--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -43,9 +43,20 @@
         </div>
     </main>
 
+     <!-- modal confirmar compra -->
+    <div id="modalConfirmarCompra">
+        <div class="modal-content">
+            <h2>Confirmar compra</h2>
+            <p>¿Desea confirmar la compra?</p>
+            <button type="button" id="generarTicketButton" class="button">Confirmar</button>
+            <button type="button" id="cancelarCompraButton" class="button">Cancelar</button>
+        </div>
+    </div>
+
+
     <!-- Pie de página -->
     <footer>
-        <a href="ticket.html" class="footer-btn">Confirmar compra</a>
+        <button type="button" id="confirmarCompraButton" class="button">Confirmar compra</button>
     </footer>
 </body>
 
