--- a/frontend/views/cliente/productos.html
+++ b/frontend/views/cliente/productos.html
@@ -24,7 +24,7 @@
     <!-- Barra de navegación -->
     <nav>
         <ul>
-            <li class="salir-button"><a href="bienvenida.html">Salir</a></li>
+            <li class="salir-button"><a href="bienvenida.html" class="button">Salir</a></li>
         </ul>
     </nav>
 
@@ -33,9 +33,9 @@
         <h1 style="text-align: center;">Productos</h1>
         <div class="container-buttons">
             <p>Filtrar por:</p>
-            <button type="button" name="todos-button">Todos</button>
-            <button type="button" name="xbox-button">Xbox</button>
-            <button type="button" name="play-button">PlayStation</button>
+            <button type="button" name="todos-button" class="button">Todos</button>
+            <button type="button" name="xbox-button" class="button">Xbox</button>
+            <button type="button" name="play-button" class="button">PlayStation</button>
         </div>
         <!-- Aquí irá el contenido dinámico -->
 
@@ -45,15 +45,15 @@
 
         <div id="paginacion-container">
             
-            <button type="button" id="anterior-button">Anterior</button>
+            <button type="button" id="anterior-button" class="button">Anterior</button>
             <p><span id="pagina-actual"></span></p>
-            <button type="button" id="siguiente-button">Siguiente</button>
+            <button type="button" id="siguiente-button" class="button">Siguiente</button>
         </div>
     </main>
 
     <!-- Pie de página -->
     <footer>
-        <a href="carrito.html" class="footer-btn">Carrito</a>
+        <a href="carrito.html" class="footer-btn button">Carrito</a>
     </footer>
 
 </body>
