--- a/frontend/styles/cliente/carrito.css
+++ b/frontend/styles/cliente/carrito.css
@@ -10,7 +10,7 @@
 
 #carrito-container .card {
     background: #fff;
-    color: black!important;
+    color: black !important;
     border-radius: 10px;
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -30,21 +30,6 @@
 
 .card-content {
     flex-grow: 1;
-}
-
-.agregar-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    border: none;
-    background-color: purple;
-    color: white;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.agregar-button:hover {
-    background-color: violet;
 }
 
 .quitar-button {
@@ -87,4 +72,34 @@
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 2rem;
+}
+
+
+/*Modal confirmar compra*/
+#modalConfirmarCompra {
+    display: none;
+    /* Oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    align-items: center;
+    justify-content: center;
+}
+
+#modalConfirmarCompra.mostrar {
+    display: flex;
+    /* Mostramos el modal como flexbox */
+
+}
+
+.modal-content {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 10px;
+    max-width: 400px;
+    text-align: center;
 }
