se agrega funcion descargar PDF

--- a/frontend/views/cliente/bienvenida.html
+++ b/frontend/views/cliente/bienvenida.html
@@ -47,7 +47,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p></p>
+        <a href="../administrador/login.html" class="button">Login admin</a>
     </footer>
 </body>
 
