--- a/frontend/views/cliente/carrito.html
+++ b/frontend/views/cliente/carrito.html
@@ -46,8 +46,8 @@
     <!-- modal confirmar compra -->
     <div id="modalConfirmarCompra">
         <div class="modal-content">
-            <h2>Confirmar compra</h2>
-            <p>¿Desea confirmar la compra?</p>
+            <img src="https://t3.ftcdn.net/jpg/01/01/48/52/360_F_101485292_IHAPChln6hmyesArnaMTpvI60yf6xlf5.jpg" alt="buy">
+            <h2>¿Desea confirmar la compra?</h2>
             <button type="button" id="generarTicketButton" class="button">Confirmar</button>
             <button type="button" id="cancelarCompraButton" class="button">Cancelar</button>
         </div>
