Modificación dashboard y alta producto admin

--- a/frontend/views/administrador/dashboard.html
+++ b/frontend/views/administrador/dashboard.html
@@ -38,6 +38,10 @@
         <!-- Aquí irá el contenido dinámico -->
 
         <div id="productos-container"></div>
+
+        <div class="contenedor-altaproducto">
+            <h2 class="button alta-producto" id="volverlogin-button">Volver al login</h2>
+        </div>
     </main>
 </body>
 <script src="../../scripts/administrador/dashboard.js" defer></script>
