--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -29,7 +29,9 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" required>
 
-                <button type="submit" class="button">INGRESAR</button>
+                <button type="submit" class="button">INGRESAR</button><br>
+
+                <button type="button" id="btn-acceso-rapido" class="button-tester" >Acceso rápido (TESTER)</button>
             </form>
             <% if (error) { %>
                 <p style="color: red; text-align: center;"><%= error %></p>
@@ -40,6 +42,17 @@
     <footer>
         <a href="/frontend/views/cliente/bienvenida.html" class="button">Volver al inicio</a>
     </footer>
+
+    <script>
+        document.getElementById('btn-acceso-rapido').addEventListener('click', () => {
+        const testEmail = 'admin@gamestore.com'; 
+        const testPassword = '1234'; 
+
+        document.getElementById('email').value = testEmail;
+        document.getElementById('password').value = testPassword;
+        });
+    </script>
+
 </body>
 </html>
 
