--- a/frontend/styles/administrador/login.css
+++ b/frontend/styles/administrador/login.css
@@ -62,6 +62,26 @@
     background-color: violet;
 }
 
+/* Botón tester */
+.button-tester {
+    margin: 8px auto 0 auto; 
+    padding: 6px 10px;
+    width: fit-content;
+    background-color: #444444;
+    color: #f0f0f0;
+    border: 1px solid #333333;
+    border-radius: 6px;
+    font-weight: normal;
+    font-size: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block; 
+}
+
+.button-tester:hover {
+    background-color: #5bae5e;
+}
+
 /* Mensaje de error */
 #errorMensaje {
     color: red;
