--- a/backend/views/alta-producto.ejs
+++ b/backend/views/alta-producto.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/altaymod-producto.css">
 </head>
+
 <body>
     <div class="alumnos-container">
         <p>Freijomil Bruno</p>
@@ -43,10 +45,50 @@
 <script>
 
     /* Función para volver al dashboard al presionar el botón "VOLVER" */
-    document.getElementById("volver-button").addEventListener("click", ()=>{
+    document.getElementById("volver-button").addEventListener("click", () => {
         window.location.href = '/juegos/dashboard';
     })
 
+    /* Función para agregar elemento */
+    document.getElementById("agregar-button").addEventListener("click", async () => {
+        const nombre = document.getElementById("input-nombre").value;
+        const plataforma = document.getElementById("input-plataforma").value;
+        const precio = document.getElementById("input-precio").value;
+        const imagen = document.getElementById("input-urlimg").value;
+
+        const juego = { nombre, plataforma, precio, imagen };
+
+
+        // Validación para chequear que esten los campos correctos
+        if (!nombre || isNaN(precio) || !imagen) {
+            alert("Por favor, completá todos los campos correctamente.");
+            return;
+        }
+
+
+        try {
+            const res = await fetch('/juegos/add', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(juego)
+            });
+
+            const data = await res.json();
+            alert(data.message || data.error);
+
+            if (res.ok) {
+                // Redirigir al dashboard si se agregó con éxito
+                window.location.href = '/juegos/dashboard';
+            }
+        } catch (error) {
+            console.error('Error al agregar el producto:', error);
+            alert('Error al agregar el producto.');
+        }
+    });
+
 
 </script>
+
 </html>
